[package]
name = "attestation-daemon"
version = "0.1.0"
authors = ["LKatalin"]
edition = "2018"

[dependencies]
openssl = "0.10.23"
num-traits = "0.2.8"
byteorder = "1.3.2"
read-byte-slice = "0.1.2"
signatory-ring = "0.12.0"
signatory = "0.12.0"
dcap-ql = { path = "../../rust-sgx/dcap-ql" }
"sgx-isa" = { version = "0.3.0", path = "../../rust-sgx/sgx-isa" }
